navigation not responsive on homepage and contactus onResize Solved!

--- a/src/style/components/_product-prev.scss
+++ b/src/style/components/_product-prev.scss
@@ -24,7 +24,6 @@
         width: 100%;
         height: 23rem;
         background-size: cover;
-        margin-bottom: 1rem;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
         overflow: hidden;
@@ -62,7 +61,7 @@
         text-align: center;
 
         position: absolute;
-        top: 17rem;
+        top: 55%;
         left: 2rem;
     }
 
